k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gift-ai-service
  namespace: gift-ai
spec:
  selector:
    app: gift-ai
  ports:
  -  protocol: TCP
     port: 5173
     targetPort: 80
